// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`grid grid: add should add a move to the grid 1`] = `
Array [
  -2, -2, -2, -2, -2, -2, -2, -2, -2, -2, -2, -2, -2,
  -1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, -1, -1,
  -1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, -1, -1,
  -1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, -1, -1,
  -1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, -1, -1,
  -1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, -1, -1,
  -1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, -1, -1,
  -1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, -1, -1,
  -1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, -1, -1,
  -1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, -1, -1,
  -1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, -1, -1,
  -1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, -1, -1,
  -1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, -1, -1,
  -1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, -1, -1,
  -1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, -1, -1,
  -1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, -1, -1,
  -1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, -1, -1,
  -1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, -1, -1,
  -1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, -1, -1,
  -1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, -1, -1,
  -1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, -1, -1,
  -2, -2, -2, -2, -2, -2, -2, -2, -2, -2, -2, -2, -2,
  -2, -2, -2, -2, -2, -2, -2, -2, -2, -2, -2, -2, -2,
]
`;

exports[`grid grid: clearLines should clear a single line from the grid 1`] = `
Array [
  -2, -2, -2, -2, -2, -2, -2, -2, -2, -2, -2, -2, -2,
  -1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, -1, -1,
  -1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, -1, -1,
  -1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, -1, -1,
  -1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, -1, -1,
  -1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, -1, -1,
  -1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, -1, -1,
  -1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, -1, -1,
  -1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, -1, -1,
  -1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, -1, -1,
  -1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, -1, -1,
  -1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, -1, -1,
  -1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, -1, -1,
  -1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, -1, -1,
  -1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, -1, -1,
  -1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, -1, -1,
  -1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, -1, -1,
  -1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, -1, -1,
  -1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, -1, -1,
  -1, 0, 0, 0, 4, 4, 2, 3, 2, 2, 2, -1, -1,
  -1, 0, 0, 0, 4, 4, 2, 3, 7, 7, 2, -1, -1,
  -2, -2, -2, -2, -2, -2, -2, -2, -2, -2, -2, -2, -2,
  -2, -2, -2, -2, -2, -2, -2, -2, -2, -2, -2, -2, -2,
]
`;

exports[`grid grid: clearLines should clear multiple lines from the grid 1`] = `
Array [
  -2, -2, -2, -2, -2, -2, -2, -2, -2, -2, -2, -2, -2,
  -1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, -1, -1,
  -1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, -1, -1,
  -1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, -1, -1,
  -1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, -1, -1,
  -1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, -1, -1,
  -1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, -1, -1,
  -1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, -1, -1,
  -1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, -1, -1,
  -1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, -1, -1,
  -1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, -1, -1,
  -1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, -1, -1,
  -1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, -1, -1,
  -1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, -1, -1,
  -1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, -1, -1,
  -1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, -1, -1,
  -1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, -1, -1,
  -1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, -1, -1,
  -1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, -1, -1,
  -1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, -1, -1,
  -1, 0, 6, 0, 4, 4, 2, 3, 2, 2, 2, -1, -1,
  -2, -2, -2, -2, -2, -2, -2, -2, -2, -2, -2, -2, -2,
  -2, -2, -2, -2, -2, -2, -2, -2, -2, -2, -2, -2, -2,
]
`;

exports[`grid grid: replaceLines should restore a single line to the grid 1`] = `
Array [
  -2, -2, -2, -2, -2, -2, -2, -2, -2, -2, -2, -2, -2,
  -1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, -1, -1,
  -1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, -1, -1,
  -1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, -1, -1,
  -1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, -1, -1,
  -1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, -1, -1,
  -1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, -1, -1,
  -1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, -1, -1,
  -1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, -1, -1,
  -1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, -1, -1,
  -1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, -1, -1,
  -1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, -1, -1,
  -1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, -1, -1,
  -1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, -1, -1,
  -1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, -1, -1,
  -1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, -1, -1,
  -1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, -1, -1,
  -1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, -1, -1,
  -1, 0, 0, 0, 4, 4, 2, 3, 2, 2, 2, -1, -1,
  -1, 0, 0, 0, 4, 4, 2, 3, 7, 7, 2, -1, -1,
  -1, 1, 1, 1, 1, 2, 2, 3, 3, 7, 7, -1, -1,
  -2, -2, -2, -2, -2, -2, -2, -2, -2, -2, -2, -2, -2,
  -2, -2, -2, -2, -2, -2, -2, -2, -2, -2, -2, -2, -2,
]
`;

exports[`grid grid: replaceLines should restore multiple lines to the grid 1`] = `
Array [
  -2, -2, -2, -2, -2, -2, -2, -2, -2, -2, -2, -2, -2,
  -1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, -1, -1,
  -1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, -1, -1,
  -1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, -1, -1,
  -1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, -1, -1,
  -1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, -1, -1,
  -1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, -1, -1,
  -1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, -1, -1,
  -1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, -1, -1,
  -1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, -1, -1,
  -1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, -1, -1,
  -1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, -1, -1,
  -1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, -1, -1,
  -1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, -1, -1,
  -1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, -1, -1,
  -1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, -1, -1,
  -1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, -1, -1,
  -1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, -1, -1,
  -1, 0, 6, 0, 4, 4, 2, 3, 2, 2, 2, -1, -1,
  -1, 6, 6, 6, 4, 4, 2, 3, 7, 7, 2, -1, -1,
  -1, 1, 1, 1, 1, 2, 2, 3, 3, 7, 7, -1, -1,
  -2, -2, -2, -2, -2, -2, -2, -2, -2, -2, -2, -2, -2,
  -2, -2, -2, -2, -2, -2, -2, -2, -2, -2, -2, -2, -2,
]
`;

exports[`grid grid: sub should remove a move from the grid 1`] = `
Array [
  -2, -2, -2, -2, -2, -2, -2, -2, -2, -2, -2, -2, -2,
  -1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, -1, -1,
  -1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, -1, -1,
  -1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, -1, -1,
  -1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, -1, -1,
  -1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, -1, -1,
  -1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, -1, -1,
  -1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, -1, -1,
  -1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, -1, -1,
  -1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, -1, -1,
  -1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, -1, -1,
  -1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, -1, -1,
  -1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, -1, -1,
  -1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, -1, -1,
  -1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, -1, -1,
  -1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, -1, -1,
  -1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, -1, -1,
  -1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, -1, -1,
  -1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, -1, -1,
  -1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, -1, -1,
  -1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, -1, -1,
  -2, -2, -2, -2, -2, -2, -2, -2, -2, -2, -2, -2, -2,
  -2, -2, -2, -2, -2, -2, -2, -2, -2, -2, -2, -2, -2,
]
`;
